--- a/Models/E2E/2021.12.04_YourTTS.md
+++ b/Models/E2E/2021.12.04_YourTTS.md
@@ -104,30 +104,88 @@ For reproducibility, our source-code is available at the [Coqui TTS [Github]](ht
 First, unlike previous work (**SC-GlowTTS**[^04], **VITS**[^19]), in our model we used raw text as input instead of phonemes.
 This allows more realistic results for languages without good open-source grapheme-to-phoneme converters available.
 
-As in previous works, e.g., **VITS**[^19], we use a transformer-based text encoder (**Glow-TTS**[^20], **SC-GlowTTS**[^04]).
-However, for multilingual training, we concatenate 4-dimensional trainable language embeddings into the embeddings of each input character.
-In addition, we also increased the number of transformer blocks to 10 and the number of hidden channels to 196.
-As a decoder, we use a stack of 4 affine coupling layers [^21] each layer is itself a stack of 4 **WaveNet** residual blocks[^22], as in **VITS** model.
+</td><td>
 
-As a vocoder we use the HiFi-GAN [^23] version 1 with the discriminator modifications introduced by **VITS**[^19].
-Furthermore, for efficient end2end training, we connect the TTS model with the vocoder using a variational autoencoder (VAE) [^24].
+***YourTTS*** 建立在 **VITS**[^19] 之上, 但对零样本多说话人和多语言训练进行了一些新修改.
+首先, 与之前的工作 (**SC-GlowTTS**[^04], **VITS**[^19]) 不同, 我们使用原始文本作为输入, 而不是音素.
+这使得对于没有可用的开源字素转音素转换器 (G2P) 的语言, 可以获得更真实的结果.
+
+</td></tr>
+<tr><td>
+
+As in previous works, e.g., **VITS**[^19], we use a Transformer-based text encoder (**Glow-TTS**[^20], **SC-GlowTTS**[^04]).
+However, for multilingual training, we concatenate 4-dimensional trainable language embeddings into the embeddings of each input character.
+In addition, we also increased the number of Transformer blocks to 10 and the number of hidden channels to 196.
+As a decoder, we use a stack of 4 affine coupling layers (**RealNVP**[^21]) each layer is itself a stack of 4 **WaveNet** residual blocks[^22], as in **VITS** model.
+
+</td><td>
+
+与之前的工作 (如 **VITS**[^19]) 一样, 我们使用基于 Transformer 的文本编码器 (**Glow-TTS**[^20], **SC-GlowTTS**[^04]).
+然而, 为了进行多语言训练, 我们将 4 维可训练语言嵌入拼接到每个输入字符的嵌入中.
+此外, 我们还增加了 Transformer 块的数量到 10, 隐藏通道的数量到 196.
+对于解码器部分, 我们使用 4 层仿射耦合层 (**RealNVP**[^21]) 的堆叠, 每层都是 4 个 **WaveNet** 残差块的堆叠, 与 **VITS** 模型相同.
+
+</td></tr>
+<tr><td>
+
+As a vocoder we use the **HiFi-GAN**[^23] version 1 with the discriminator modifications introduced by **VITS**[^19].
+Furthermore, for efficient end2end training, we connect the TTS model with the vocoder using a **Variational Autoencoder (VAE)**[^24].
 For this, we use the Posterior Encoder proposed by **VITS**[^19].
-The Posterior Encoder consists of 16 non-causal WaveNet residual blocks [^25], **Glow-TTS**[^20].
+The Posterior Encoder consists of 16 non-causal WaveNet residual blocks (**WaveGlow**[^25], **Glow-TTS**[^20]).
 As input, the Posterior Encoder receives a linear spectrogram and predicts a latent variable, this latent variable is used as input for the vocoder and for the flow-based decoder, thus, no intermediate representation (such as mel-spectrograms) is necessary.
 This allows the model to learn an intermediate representation; hence, it achieves superior results to a two-stage approach system in which the vocoder and the TTS model are trained separately (**VITS**[^19]).
 Furthermore, to enable our model to synthesize speech with diverse rhythms from the input text, we use the stochastic duration predictor proposed in **VITS**[^19].
 
-***YourTTS*** during training and inference is illustrated in Figure~\ref{fig:generaltop}, where `++` indicates concatenation, red connections mean no gradient will be propagated by this connection, and dashed connections are optional.
-We omit the Hifi-GAN discriminator networks for simplicity.
+</td><td>
+
+声码器我们使用 **HiFi-GAN** 版本 1, 判别器使用 **VITS**[^19] 引入的修改.
+此外, 为了高效端到端训练, 我们将 TTS 模型和声码器使用变分自编码器[^24]连接起来.
+为此, 我们使用 **VITS**[^19] 提出的后验编码器.
+后验编码器由 16 个非因果 WaveNet 残差块组成 (**WaveGlow**[^25], **Glow-TTS**[^20]).
+
+作为输入, 后验编码器接收线性频谱图, 预测隐变量, 这个隐变量作为声码器和流式解码器的输入, 因此, 不需要中间表示 (如梅尔频谱图).
+这使得模型可以学习中间表示, 因此, 它相比两阶段方法系统单独训练声码器和 TTS 模型能取得更好的结果 (**VITS**[^19]).
+此外, 为了使得模型能够从输入文本中合成具有多样的韵律的语音, 我们使用 **VITS**[^19] 提出的随机时长预测器.
+
+</td></tr>
+<tr><td>
+
+***YourTTS*** during training and inference is illustrated in [Figure.01](#Fig.01), where `++` indicates concatenation, red connections mean no gradient will be propagated by this connection, and dashed connections are optional.
+We omit the **HiFi-GAN** discriminator networks for simplicity.
+
+</td><td>
+
+***YourTTS*** 在训练和推理过程中如[图 01](#Fig.01) 所示, `++` 表示拼接, 红色连线表示不会传播梯度, 虚线表示可选.
+我们为了简单起见省略了 **HiFi-GAN** 判别器网络.
+
+</td></tr>
+<tr><td colspan="2">
+
+![](Images/2021.12.04_YourTTS_Fig.01.png)
+
+<a id="Fig.01">Figure.01</a>: YourTTS diagram depicting (a) training procedure and (b) inference procedure.
+
+</td></tr>
+<tr><td>
 
 To give the model zero-shot multi-speaker generation capabilities we condition all affine coupling layers of the flow-based decoder, the posterior encoder, and the vocoder on external speaker embeddings.
 We use global conditioning (**WaveNet**[^22]) in the residual blocks of the coupling layers as well as in the posterior encoder.
 We also sum the external speaker embeddings with the text encoder output and the decoder output before we pass them to the duration predictor and the vocoder, respectively.
-We use linear projection layers to match the dimensions before element-wise summations (see Figure \ref{fig:generaltop}).
+We use linear projection layers to match the dimensions before element-wise summations (see [Figure.01](#Fig.01)).
 
-Also, inspired by [^26], we investigated Speaker Consistency Loss (SCL) in the final loss.
+</td><td>
+
+为了赋予模型零样本多说话人生成能力, 我们将基于流的解码器, 后验编码器, 和声码器的所有仿射耦合层都条件在外部说话人嵌入上.
+我们在耦合层的残差块和后验编码器中使用全局条件化 (**WaveNet**[^22]).
+我们还将外部说话人嵌入和文本编码器输出和解码器输出相加, 并将它们分别传递给时长预测器和声码器.
+我们使用线性投影层来匹配维度, 然后进行逐元素求和 (见[图 01](#Fig.01)).
+
+</td></tr>
+<tr><td>
+
+Also, inspired by [^26], we investigated **Speaker Consistency Loss (SCL)** in the final loss.
 In this case, a pre-trained speaker encoder is used to extract speaker embeddings from the generated audio and ground truth on which we maximize the cosine similarity.
-Formally, let $\phi(.)$ be a function outputting the embedding of a speaker, $cos\_sim$ be the cosine similarity function, $\alpha$ a positive real number that controls the influence of the SCL in the final loss, and $n$ the batch size, the SCL is defined as follows:
+Formally, let $\phi(\cdot)$ be a function outputting the embedding of a speaker, $cos\_sim$ be the cosine similarity function, $\alpha$ a positive real number that controls the influence of the SCL in the final loss, and $n$ the batch size, the SCL is defined as follows:
 
 $$
 L_{SCL} = \frac{- \alpha }{n} \cdot \sum_{i}^{n}{~cos\_sim(\phi(g_{i}), \phi(h_{i}))},
@@ -135,13 +193,39 @@ $$
 
 where $g$ and $h$ represent, respectively, the ground truth and the generated speaker audio.
 
+</td><td>
+
+受到 [^26] 的启发, 我们研究了最终损失中的**说话人一致性损失 (SCL)**.
+在这种情况下, 我们使用预训练的说话人编码器从生成的音频和真实音频上提取说话人嵌入, 并最大化余弦相似度.
+形式上, 令 $\phi(\cdot)$ 为输出说话人嵌入的函数, $cos\_sim$ 为余弦相似度函数, $\alpha$ 为正实数, 控制 SCL 在最终损失中的影响, $n$ 为批大小, SCL 定义如下:
+
+$$
+L_{SCL} = \frac{- \alpha }{n} \cdot \sum_{i}^{n}{~cos\_sim(\phi(g_{i}), \phi(h_{i}))},
+$$
+
+</td></tr>
+<tr><td>
+
 During training, the Posterior Encoder receives linear spectrograms and speaker embeddings as input and predicts a latent variable $z$.
 This latent variable and speaker embeddings are used as input to the GAN-based vocoder generator which generates the waveform.
-For efficient end-to-end vocoder training, we randomly sample constant length partial sequences from $z$ as in[^23], [^27], [^28], **VITS**[^19].
-The Flow-based decoder aims to condition the latent variable $z$ and speaker embeddings with respect to a $P_{Zp}$ prior distribution.
+For efficient end-to-end vocoder training, we randomly sample constant length partial sequences from $z$ as in **HiFi-GAN**[^23], **GAN-TTS**[^27], **FastSpeech2**[^28], **VITS**[^19].
+The Flow-based decoder conditions the latent variable $z$ and speaker embeddings with respect to a $P_{Zp}$ prior distribution.
 To align the $P_{Zp}$ distribution with the output of the text encoder, we use the **Monotonic Alignment Search (MAS)** (**Glow-TTS**[^20], **VITS**[^19]).
 The stochastic duration predictor receives as input speaker embeddings, language embeddings and the duration obtained through MAS.
 To generate human-like rhythms of speech, the objective of the stochastic duration predictor is a variational lower bound of the log-likelihood of the phoneme (pseudo-phoneme in our case) duration.
+
+</td><td>
+
+在训练时, 后验编码器接收线性频谱图和说话人嵌入作为输入, 预测隐变量 $z$.
+这个隐变量和说话人嵌入作为基于 GAN 的声码器生成器的输入, 生成波形.
+为了高效的端到端声码器训练, 我们随机从 $z$ 中采样固定长度的部分序列, 与 **HiFi-GAN**[^23], **GAN-TTS**[^27], **FastSpeech2**[^28], **VITS**[^19] 相同.
+基于流的解码器将隐变量 $z$ 和说话人嵌入条件在 $P_{Zp}$ 先验分布上.
+为了对齐 $P_{Zp}$ 分布和文本编码器输出, 我们使用 **单调对齐搜索 (MAS)** (**Glow-TTS**[^20], **VITS**[^19]).
+随机时长预测器接收说话人嵌入, 语言嵌入和通过 MAS 获得的时长作为输入.
+为了生成类似人类的语音韵律, 随机时长预测器的目标是对音素 (本工作为伪音素) 时长的对数似然的变分下界.
+
+</td></tr>
+<tr><td>
 
 During inference, MAS is not used.
 Instead, $P_{Zp}$ distribution is predicted by the text encoder and the duration is sampled from random noise through the inverse transformation of the stochastic duration predictor and then, converted to integer.
@@ -149,6 +233,11 @@ In this way, a latent variable $z_p$ is sampled from the distribution $P_{Zp}$.
 The inverted Flow-based decoder receives as input the latent variable $z_p$ and the speaker embeddings, transforming the latent variable $z_p$ into the latent variable $z$ which is passed as input to the vocoder generator, thus obtaining the synthesized waveform.
 
 </td><td>
+
+在推理时, MAS 未被使用.
+相反, $P_{Zp}$ 分布由文本编码器预测, 时长从随机噪声采样通过随机时长预测器的逆变换然后转换为整数.
+这样, 隐变量 $z_p$ 被采样自 $P_{Zp}$ 分布.
+逆向的基于流的解码器接收隐变量 $z_p$ 和说话人嵌入作为输入, 将隐变量 $z_p$ 转换为隐变量 $z$, 作为声码器生成器的输入, 获得合成波形.
 
 </td></tr></table>
 
@@ -533,14 +622,14 @@ Furthermore, we intend to explore the application of this model for data augment
 [^18]: li2021light
 [^19]: [VITS](2021.06.11_VITS.md)
 [^20]: [Glow-TTS](../Acoustic/2020.05.22_Glow-TTS.md)
-[^21]: dinh2016density
+[^21]: [RealNVP](../_Basis/2016.05.27_RealNVP.md)
 [^22]: [WaveNet](../Vocoder/2016.09.12_WaveNet.md)
 [^23]: [HiFi-GAN](../Vocoder/2020.10.12_HiFi-GAN.md)
 [^24]: kingma2013auto
-[^25]: prenger2019waveglow
+[^25]: [WaveGlow](../Vocoder/2018.10.31_WaveGlow.md)
 [^26]: xin21_interspeech
-[^27]: binkowski2019high
-[^28]: ren2020fastspeech
+[^27]: [GAN-TTS](../Vocoder/2019.09.25_GAN-TTS.md)
+[^28]: [FastSpeech2](../Acoustic/2020.06.08_FastSpeech2.md)
 [^29]: heo2020clova
 [^30]: chung2020in
 [^31]: chung2018voxceleb2
